--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-jscs": "^1.8.0",
-    "grunt-mocha-test": "^0.12.7",
+    "grunt-mocha-istanbul": "^2.4.0",
+    "istanbul": "^0.3.17",
     "load-grunt-config": "^0.17.1",
     "mocha": "^2.2.5"
   },
